@@ -358,6 +358,7 @@ ui.app.warnPalette=Warning palette
 ui.app.backgroundPalette=Background palette
 ui.app.themeHues=Theme hues
 ui.app.allHues=All hues
+ui.app.showAllHues=Show all hues
 ui.app.darkTheme=Dark theme
 ui.app.notSet=Not set (default)
 ui.app.dateBarDisabled=Date bar disabled
@@ -449,6 +450,8 @@ ui.app.blankWindow=New window
 ui.app.mangoLegacyWindow=Mango legacy window
 ui.app.chooseASection=Choose a section
 ui.app.settingsSaved=Settings saved
+ui.app.userModuleUrl=User module URL
+ui.app.miscSettings=Miscellaneous settings
 
 modules.versionState=Release type
 
