@@ -1,144 +1,194 @@
 <h1 ma-tr="ui.app.uiSettings"></h1>
 
-<div layout layout-align="start center" layout-wrap>
-    <md-input-container flex="100" flex-gt-md="20">
-        <label ma-tr="ui.app.chooseTheme"></label>
-        <md-select ng-model="uiSettings.defaultTheme" ng-change="uiSettings.generateTheme()">
-            <md-option ng-repeat="(name,theme) in uiSettings.theming.THEMES" ng-if="name.indexOf('dynamicTheme') !== 0" ng-value="name" ng-bind="name"></md-option>
-        </md-select>
-    </md-input-container>
-    <md-input-container flex="100" flex-gt-md="20">
-        <label ma-tr="ui.app.logoSource"></label>
-        <input ng-model="uiSettings.logoSrc" ma-empty-input ng-model-options="{debounce: 500}">
-    </md-input-container>
-	<md-input-container flex="100" flex-gt-md="20">
-        <label ma-tr="ui.app.codeColoring"></label>
-        <md-select ng-model="uiSettings.codeTheme">
-            <md-option value="ambiance">Ambiance</md-option>
-            <md-option value="chaos">Chaos</md-option>
-            <md-option value="chrome">Chrome</md-option>
-            <md-option value="clouds_midnight">Clouds Midnight</md-option>
-            <md-option value="clouds">Clouds</md-option>
-            <md-option value="cobalt">Cobalt</md-option>
-            <md-option value="crimson_editor">Crimson Editor</md-option>
-            <md-option value="dawn">Dawn</md-option>
-            <md-option value="dreamweaver">Dreamweaver</md-option>
-            <md-option value="ecliplse">Eclipse</md-option>
-            <md-option value="github">Github</md-option>
-            <md-option value="idle_fingers">Idle Fingers</md-option>
-            <md-option value="iplastic">iPlastic</md-option>
-            <md-option value="katzenmilch">Katzenmilch</md-option>
-            <md-option value="kr_theme">Kr Theme</md-option>
-            <md-option value="kuroir">Kuroir</md-option>
-            <md-option value="merbivore_soft">Merbivore Soft</md-option>
-            <md-option value="merbivore">Merbivore</md-option>
-            <md-option value="mono_industrial">Mono Industrial</md-option>
-            <md-option value="monokai">Monokai</md-option>
-            <md-option value="pastel_on_dark">Pastel On Dark</md-option>
-            <md-option value="solarized_dark">Solarized Dark</md-option>
-            <md-option value="solarized_light">Solarized Light</md-option>
-            <md-option value="sqlserver">Sql Server</md-option>
-            <md-option value="terminal">Terminal</md-option>
-            <md-option value="textmate">TextMate</md-option>
-            <md-option value="tomorrow_night_blue">Tomorrow Night Blue</md-option>
-            <md-option value="tomorrow_night_bright">Tomorrow Night Bright</md-option>
-            <md-option value="tomorrow_night_eighties">Tomorrow Night Eighties</md-option>
-            <md-option value="tomorrow_night">Tomorrow Night</md-option>
-            <md-option value="tomorrow">Tomorrow</md-option>
-            <md-option value="twilight">Twilight</md-option>
-            <md-option value="vibrant_ink">Vibrant Ink</md-option>
-            <md-option value="xcode">xCode</md-option>
-        </md-select>
-    </md-input-container>
-    <md-input-container flex="100" flex-gt-md="20">
-        <label ma-tr="ui.app.mapsApiKey"></label>
-        <input ng-model="uiSettings.googleMapsApiKey" ma-empty-input>
-    </md-input-container>
-    <md-input-container flex="100" flex-gt-md="20">
-        <label ma-tr="ui.app.googleAnalyticsPropertyId"></label>
-        <input ng-model="uiSettings.googleAnalyticsPropertyId" ma-empty-input>
-    </md-input-container>
-</div>
-
 <div layout layout-align="start end" layout-wrap>
   <md-button flex="nogrow" class="md-raised md-primary" ng-click="uiSettings.save()"><md-icon>save</md-icon> <span ma-tr="common.save"></span></md-button>
   <md-button flex="nogrow" class="md-raised" ng-click="uiSettings.reset(); uiSettings.generateTheme()"><md-icon>undo</md-icon> <span ma-tr="ui.app.revert"></span></md-button>
-
-  <md-checkbox flex ng-model="uiSettings.themes[uiSettings.defaultTheme].dark"
-      ng-disabled="uiSettings.defaultTheme !== 'userTheme'" ng-change="uiSettings.generateTheme()">
-    <span ma-tr="ui.app.darkTheme"></span>
-  </md-checkbox>
-
-
-  <!-- <h4>Code Coloring Preview:</h4> -->
-  <ma-ui-live-editor flex="100" flex-gt-md="50" flex-order="-5" flex-order-gt-md="5" style="height: 60px; min-height:60px; width:100%;" ng-model="codePreview" ng-init="codePreview='&lt;h1&gt;Code Coloring Preview&lt;/h1&gt;
-&lt;ma-calc input=&quot;points | filter:{name:&lsquo;Real Power &lsquo; + phase + &lsquo; (kW)&lsquo;} | maFirst&quot; output=&quot;power&quot;&gt;&lt;/ma-calc&gt;'" theme="{{uiSettings.codeTheme}}"></ma-ui-live-editor>
 </div>
 
-<h2 ma-tr="ui.app.themeHues" layout layout-align="center start"></h2>
-<div layout layout-wrap>
-    <div flex="50" flex-gt-md="25" layout="column" layout-align="start stretch">
-        <h3 layout="column" layout-align="start center" ma-tr="ui.app.primaryPalette"></h3>
-        <md-input-container >
-            <md-select ng-model="uiSettings.themes[uiSettings.defaultTheme].primaryPalette"
-                ng-disabled="uiSettings.defaultTheme !== 'userTheme'" ng-change="uiSettings.generateTheme()">
-              <md-option ng-value="undefined"><em ma-tr="ui.app.notSet"></em></md-option>
-              <md-option ng-repeat="(name,palette) in uiSettings.theming.PALETTES" ng-value="name" ng-bind="name"></md-option>
-            </md-select>
-        </md-input-container>
-        <ma-color-preview theme="{{uiSettings.defaultTheme}}" palette="primary"></ma-color-preview>
-    </div>
-    <div flex="50" flex-gt-md="25" layout="column" layout-align="start stretch">
-        <h3 layout="column" layout-align="start center" ma-tr="ui.app.accentPalette"></h3>
-        <md-input-container >
-            <md-select ng-model="uiSettings.themes[uiSettings.defaultTheme].accentPalette"
-                ng-disabled="uiSettings.defaultTheme !== 'userTheme'" ng-change="uiSettings.generateTheme()">
-              <md-option ng-value="undefined"><em ma-tr="ui.app.notSet"></em></md-option>
-              <md-option ng-repeat="(name,palette) in uiSettings.theming.PALETTES" ng-value="name" ng-bind="name"></md-option>
-            </md-select>
-        </md-input-container>
-        <ma-color-preview theme="{{uiSettings.defaultTheme}}" palette="accent"></ma-color-preview>
-    </div>
-    <div flex="50" flex-gt-md="25" layout="column" layout-align="start stretch">
-        <h3 layout="column" layout-align="start center" ma-tr="ui.app.warnPalette"></h3>
-        <md-input-container >
-            <md-select ng-model="uiSettings.themes[uiSettings.defaultTheme].warnPalette"
-                ng-disabled="uiSettings.defaultTheme !== 'userTheme'" ng-change="uiSettings.generateTheme()">
-              <md-option ng-value="undefined"><em ma-tr="ui.app.notSet"></em></md-option>
-              <md-option ng-repeat="(name,palette) in uiSettings.theming.PALETTES" ng-value="name" ng-bind="name"></md-option>
-            </md-select>
-        </md-input-container>
-        <ma-color-preview theme="{{uiSettings.defaultTheme}}" palette="warn"></ma-color-preview>
-    </div>
-    <div flex="50" flex-gt-md="25" layout="column" layout-align="start stretch">
-        <h3 layout="column" layout-align="start center" ma-tr="ui.app.backgroundPalette"></h3>
-        <md-input-container >
-            <md-select ng-model="uiSettings.themes[uiSettings.defaultTheme].backgroundPalette"
-                ng-disabled="uiSettings.defaultTheme !== 'userTheme'" ng-change="uiSettings.generateTheme()">
-              <md-option ng-value="undefined"><em ma-tr="ui.app.notSet"></em></md-option>
-              <md-option ng-repeat="(name,palette) in uiSettings.theming.PALETTES" ng-value="name" ng-bind="name"></md-option>
-            </md-select>
-        </md-input-container>
-        <ma-color-preview theme="{{uiSettings.defaultTheme}}" palette="background"></ma-color-preview>
-    </div>
-</div>
+<md-card>
+    <md-card-title>
+        <md-card-title-text>
+            <span class="md-headline" ma-tr="ui.app.chooseTheme"></span>
+        </md-card-title-text>
+    </md-card-title>
+    <md-card-content>
+        <div layout>
+            <div flex="100" flex-gt-md="50" layout="column">
+                <md-input-container>
+                    <label ma-tr="ui.app.chooseTheme"></label>
+                    <md-select ng-model="uiSettings.defaultTheme" ng-change="uiSettings.generateTheme()">
+                        <md-option ng-repeat="(name,theme) in uiSettings.theming.THEMES" ng-if="name.indexOf('dynamicTheme') !== 0" ng-value="name" ng-bind="name"></md-option>
+                    </md-select>
+                </md-input-container>
+                <div>
+                    <md-checkbox flex ng-model="uiSettings.themes[uiSettings.defaultTheme].dark"
+                      ng-disabled="uiSettings.defaultTheme !== 'userTheme'" ng-change="uiSettings.generateTheme()">
+                        <span ma-tr="ui.app.darkTheme"></span>
+                    </md-checkbox>
+                </div>
+            </div>
+    
+            <md-input-container flex="100" flex-gt-md="50">
+                <label ma-tr="ui.app.logoSource"></label>
+                <input ng-model="uiSettings.logoSrc" ma-empty-input ng-model-options="{debounce: 500}">
+            </md-input-container>
+        </div>
+    </md-card-content>
+</md-card>
 
-<h2 ma-tr="ui.app.allHues" layout layout-align="center start"></h2>
-<div layout layout-wrap>
-    <div flex="50" flex-gt-md="25" layout="column" layout-align="start stretch">
-        <h3 layout="column" layout-align="start center" ma-tr="ui.app.primaryPalette"></h3>
-        <ma-color-preview theme="{{uiSettings.defaultTheme}}" palette="primary" all-hues="true"></ma-color-preview>
-    </div>
-    <div flex="50" flex-gt-md="25" layout="column" layout-align="start stretch">
-        <h3 layout="column" layout-align="start center" ma-tr="ui.app.accentPalette"></h3>
-        <ma-color-preview theme="{{uiSettings.defaultTheme}}" palette="accent" all-hues="true"></ma-color-preview>
-    </div>
-    <div flex="50" flex-gt-md="25" layout="column" layout-align="start stretch">
-        <h3 layout="column" layout-align="start center" ma-tr="ui.app.warnPalette"></h3>
-        <ma-color-preview theme="{{uiSettings.defaultTheme}}" palette="warn" all-hues="true"></ma-color-preview>
-    </div>
-    <div flex="50" flex-gt-md="25" layout="column" layout-align="start stretch">
-        <h3 layout="column" layout-align="start center" ma-tr="ui.app.backgroundPalette"></h3>
-        <ma-color-preview theme="{{uiSettings.defaultTheme}}" palette="background" all-hues="true"></ma-color-preview>
-    </div>
-</div>
+<md-card>
+    <md-card-title>
+        <md-card-title-text>
+            <span class="md-headline" ma-tr="ui.app.themeHues"></span>
+        </md-card-title-text>
+    </md-card-title>
+    <md-card-content>
+        <md-checkbox ng-model="showAllHues"><span ma-tr="ui.app.showAllHues"></span></md-checkbox>
+        
+        <div layout layout-wrap>
+            <div flex="50" flex-gt-md="25" layout="column" layout-align="start stretch">
+                <h4 layout="column" layout-align="start center" ma-tr="ui.app.primaryPalette"></h3>
+                <md-input-container >
+                    <md-select ng-model="uiSettings.themes[uiSettings.defaultTheme].primaryPalette"
+                        ng-disabled="uiSettings.defaultTheme !== 'userTheme'" ng-change="uiSettings.generateTheme()">
+                      <md-option ng-value="undefined"><em ma-tr="ui.app.notSet"></em></md-option>
+                      <md-option ng-repeat="(name,palette) in uiSettings.theming.PALETTES" ng-value="name" ng-bind="name"></md-option>
+                    </md-select>
+                </md-input-container>
+                <ma-color-preview theme="{{uiSettings.defaultTheme}}" palette="primary"></ma-color-preview>
+            </div>
+            <div flex="50" flex-gt-md="25" layout="column" layout-align="start stretch">
+                <h4 layout="column" layout-align="start center" ma-tr="ui.app.accentPalette"></h3>
+                <md-input-container >
+                    <md-select ng-model="uiSettings.themes[uiSettings.defaultTheme].accentPalette"
+                        ng-disabled="uiSettings.defaultTheme !== 'userTheme'" ng-change="uiSettings.generateTheme()">
+                      <md-option ng-value="undefined"><em ma-tr="ui.app.notSet"></em></md-option>
+                      <md-option ng-repeat="(name,palette) in uiSettings.theming.PALETTES" ng-value="name" ng-bind="name"></md-option>
+                    </md-select>
+                </md-input-container>
+                <ma-color-preview theme="{{uiSettings.defaultTheme}}" palette="accent"></ma-color-preview>
+            </div>
+            <div flex="50" flex-gt-md="25" layout="column" layout-align="start stretch">
+                <h4 layout="column" layout-align="start center" ma-tr="ui.app.warnPalette"></h3>
+                <md-input-container >
+                    <md-select ng-model="uiSettings.themes[uiSettings.defaultTheme].warnPalette"
+                        ng-disabled="uiSettings.defaultTheme !== 'userTheme'" ng-change="uiSettings.generateTheme()">
+                      <md-option ng-value="undefined"><em ma-tr="ui.app.notSet"></em></md-option>
+                      <md-option ng-repeat="(name,palette) in uiSettings.theming.PALETTES" ng-value="name" ng-bind="name"></md-option>
+                    </md-select>
+                </md-input-container>
+                <ma-color-preview theme="{{uiSettings.defaultTheme}}" palette="warn"></ma-color-preview>
+            </div>
+            <div flex="50" flex-gt-md="25" layout="column" layout-align="start stretch">
+                <h4 layout="column" layout-align="start center" ma-tr="ui.app.backgroundPalette"></h3>
+                <md-input-container >
+                    <md-select ng-model="uiSettings.themes[uiSettings.defaultTheme].backgroundPalette"
+                        ng-disabled="uiSettings.defaultTheme !== 'userTheme'" ng-change="uiSettings.generateTheme()">
+                      <md-option ng-value="undefined"><em ma-tr="ui.app.notSet"></em></md-option>
+                      <md-option ng-repeat="(name,palette) in uiSettings.theming.PALETTES" ng-value="name" ng-bind="name"></md-option>
+                    </md-select>
+                </md-input-container>
+                <ma-color-preview theme="{{uiSettings.defaultTheme}}" palette="background"></ma-color-preview>
+            </div>
+        </div>
+
+        <div layout layout-wrap ng-show="showAllHues">
+            <div flex="50" flex-gt-md="25" layout="column" layout-align="start stretch">
+                <ma-color-preview theme="{{uiSettings.defaultTheme}}" palette="primary" all-hues="true"></ma-color-preview>
+            </div>
+            <div flex="50" flex-gt-md="25" layout="column" layout-align="start stretch">
+                <ma-color-preview theme="{{uiSettings.defaultTheme}}" palette="accent" all-hues="true"></ma-color-preview>
+            </div>
+            <div flex="50" flex-gt-md="25" layout="column" layout-align="start stretch">
+                <ma-color-preview theme="{{uiSettings.defaultTheme}}" palette="warn" all-hues="true"></ma-color-preview>
+            </div>
+            <div flex="50" flex-gt-md="25" layout="column" layout-align="start stretch">
+                <ma-color-preview theme="{{uiSettings.defaultTheme}}" palette="background" all-hues="true"></ma-color-preview>
+            </div>
+        </div>
+    </md-card-content>
+</md-card>
+
+</md-card-content>
+</md-card>
+
+
+<md-card>
+    <md-card-title>
+        <md-card-title-text>
+            <span class="md-headline" ma-tr="ui.app.codeColoring"></span>
+        </md-card-title-text>
+    </md-card-title>
+    <md-card-content>
+        <div layout="column">
+            <div layout>
+        	<md-input-container flex="100" flex-gt-md="33">
+                <label ma-tr="ui.app.codeColoring"></label>
+                <md-select ng-model="uiSettings.codeTheme">
+                    <md-option value="ambiance">Ambiance</md-option>
+                    <md-option value="chaos">Chaos</md-option>
+                    <md-option value="chrome">Chrome</md-option>
+                    <md-option value="clouds_midnight">Clouds Midnight</md-option>
+                    <md-option value="clouds">Clouds</md-option>
+                    <md-option value="cobalt">Cobalt</md-option>
+                    <md-option value="crimson_editor">Crimson Editor</md-option>
+                    <md-option value="dawn">Dawn</md-option>
+                    <md-option value="dreamweaver">Dreamweaver</md-option>
+                    <md-option value="ecliplse">Eclipse</md-option>
+                    <md-option value="github">Github</md-option>
+                    <md-option value="idle_fingers">Idle Fingers</md-option>
+                    <md-option value="iplastic">iPlastic</md-option>
+                    <md-option value="katzenmilch">Katzenmilch</md-option>
+                    <md-option value="kr_theme">Kr Theme</md-option>
+                    <md-option value="kuroir">Kuroir</md-option>
+                    <md-option value="merbivore_soft">Merbivore Soft</md-option>
+                    <md-option value="merbivore">Merbivore</md-option>
+                    <md-option value="mono_industrial">Mono Industrial</md-option>
+                    <md-option value="monokai">Monokai</md-option>
+                    <md-option value="pastel_on_dark">Pastel On Dark</md-option>
+                    <md-option value="solarized_dark">Solarized Dark</md-option>
+                    <md-option value="solarized_light">Solarized Light</md-option>
+                    <md-option value="sqlserver">Sql Server</md-option>
+                    <md-option value="terminal">Terminal</md-option>
+                    <md-option value="textmate">TextMate</md-option>
+                    <md-option value="tomorrow_night_blue">Tomorrow Night Blue</md-option>
+                    <md-option value="tomorrow_night_bright">Tomorrow Night Bright</md-option>
+                    <md-option value="tomorrow_night_eighties">Tomorrow Night Eighties</md-option>
+                    <md-option value="tomorrow_night">Tomorrow Night</md-option>
+                    <md-option value="tomorrow">Tomorrow</md-option>
+                    <md-option value="twilight">Twilight</md-option>
+                    <md-option value="vibrant_ink">Vibrant Ink</md-option>
+                    <md-option value="xcode">xCode</md-option>
+                </md-select>
+            </md-input-container>
+            </div>
+            <ma-ui-live-editor style="height: 60px; min-height:60px;"
+                ng-model="codePreview" ng-init="codePreview='&lt;h1&gt;Code Coloring Preview&lt;/h1&gt;
+    &lt;ma-calc input=&quot;points | filter:{name:&lsquo;Real Power &lsquo; + phase + &lsquo; (kW)&lsquo;} | maFirst&quot; output=&quot;power&quot;&gt;&lt;/ma-calc&gt;'" theme="{{uiSettings.codeTheme}}"></ma-ui-live-editor>
+        </div>
+    </md-card-content>
+</md-card>
+
+<md-card>
+    <md-card-title>
+        <md-card-title-text>
+            <span class="md-headline" ma-tr="ui.app.miscSettings"></span>
+        </md-card-title-text>
+    </md-card-title>
+    <md-card-content>
+        <div layout layout-align="start center" layout-wrap>
+            <md-input-container flex="100" flex-gt-md="33">
+                <label ma-tr="ui.app.mapsApiKey"></label>
+                <input ng-model="uiSettings.googleMapsApiKey" ma-empty-input>
+            </md-input-container>
+            <md-input-container flex="100" flex-gt-md="33">
+                <label ma-tr="ui.app.googleAnalyticsPropertyId"></label>
+                <input ng-model="uiSettings.googleAnalyticsPropertyId" ma-empty-input>
+            </md-input-container>
+            <md-input-container flex="100" flex-gt-md="33">
+                <label ma-tr="ui.app.userModuleUrl"></label>
+                <input ng-model="uiSettings.userModule" ma-empty-input>
+            </md-input-container>
+        </div>
+    </md-card-content>
+</md-card>
